--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 <script type="text/ng-template" id="/home.html">
 
     <div class="page-header">
-        <h1>Flapper News</h1>
+        <h1>whatifoundinthetubes</h1>
     </div>
 
     <div ng-repeat="post in posts | orderBy:'-upvotes'">
