--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,47 +57,26 @@
     </form>
 </script>
 <script type="text/ng-template" id="/posts.html">
-
     <div class="page-header">
         <h3>
-            <a ng-show="post.link" href="{{post.link}}">
+            <a href="{{post.link}}">
                 {{post.title}}
             </a>
         </h3>
     </div>
 
     <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
-        <span class="glyphicon glyphicon-arrow-up"
-          ng-click="incrementUpvotes(comment)"></span>
-        {{comment.upvotes}} - by {{comment.author}}
     <span style="font-size:20px; margin-left:10px;">
+        {{comment.upvotes}}
+            <span class="glyphicon glyphicon-thumbs-up"
+                  ng-click="incrementUpvotes(comment)"></span>
       {{comment.body}}
     </span>
-    </div>
-</script>
-<script type="text/ng-template" id="/posts.html">
-    <div class="page-header">
-        <h3>
-            <a ng-show="post.link" href="{{post.link}}">
-                {{post.title}}
-            </a>
-      <span ng-hide="post.link">
-        {{post.title}}
-      </span>
-        </h3>
-    </div>
-
-    <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
-    <span class="glyphicon glyphicon-thumbs-up"
-          ng-click="incrementUpvotes(comment)"></span>
-        {{comment.upvotes}} - by {{comment.author}}
-    <span style="font-size:20px; margin-left:10px;">
-      {{comment.body}}
-    </span>
+        - by {{comment.author}}
     </div>
 
     <form ng-submit="addComment()"
-          style="margin-top:30px;">
+    style="margin-top:30px;">
         <h3>Add a new comment</h3>
 
         <div class="form-group">
