--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Flapper News</title>
+    <title>whatifoundinthetubes</title>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
@@ -8,7 +8,7 @@
     <script src="/javascripts/angularapp.js"></script>
     <style> .glyphicon-arrow-up { cursor:pointer } </style>
 </head>
-<body ng-app="flapperNews" ng-controller="MainCtrl">
+<body ng-app="whatifoundinthetubes" ng-controller="MainCtrl">
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <ui-view></ui-view>
