--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
         </span>
     </div>
 
-    <form ng-submit="addPost()"
+    <form ng-submit="addPost()" ng-show="isLoggedIn()"
           style="margin-top:30px;">
         <h3>Add a new post</h3>
 
@@ -64,6 +64,9 @@
         </div>
         <button type="submit" class="btn btn-primary">Post</button>
     </form>
+    <div ng-hide="isLoggedIn()">
+        <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can post.</h3>
+    </div>
 </script>
 <script type="text/ng-template" id="/posts.html">
     <div class="page-header">
@@ -71,6 +74,9 @@
             <a href="{{post.link}}">
                 {{post.title}}
             </a>
+            <span ng-show="post.author">
+                posted by <a>{{post.author}}</a>
+            </span>
         </h3>
     </div>
 
@@ -84,8 +90,8 @@
         - by {{comment.author}}
     </div>
 
-    <form ng-submit="addComment()"
-    style="margin-top:30px;">
+    <form ng-submit="addComment()" ng-show="isLoggedIn()"
+          style="margin-top:30px;">
         <h3>Add a new comment</h3>
 
         <div class="form-group">
@@ -96,6 +102,9 @@
         </div>
         <button type="submit" class="btn btn-primary">Post</button>
     </form>
+    <div ng-hide="isLoggedIn()">
+        <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can comment.</h3>
+    </div>
 </script>
 <script type="text/ng-template" id="/register.html">
     <div class="page-header">
