--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,15 +143,15 @@
         <span>{{ error.message }}</span>
     </div>
 
-    <form ng-submit="logIn()"
+    <form ng-submit="login()"
           style="margin-top:30px;">
         <h3>Log In</h3>
 
         <div class="form-group">
             <input type="text"
                    class="form-control"
-                   placeholder="Username"
-                   ng-model="user.username"></input>
+                   placeholder="Email"
+                   ng-model="user.email"></input>
         </div>
         <div class="form-group">
             <input type="password"
