--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,9 @@
     <span ng-hide="post.link">
             {{post.title}}
     </span>
+        <span ng-show="post.author">
+                posted by <a>{{post.author}}</a>
+            </span>
         <span>
             <span ng-show="post.comments.length > 0"><a href="#/posts/{{post._id}}">{{post.comments.length}} Comments</a></span>
             <span ng-hide="post.comments.length > 0"><a href="#/posts/{{post._id}}">Comment</a></span>
