--- a/views/slack.ejs
+++ b/views/slack.ejs
@@ -25,7 +25,7 @@
 <script type="text/ng-template" id="/home.html">
 
     <div class="page-header">
-        <h1>grayze</h1>
+        <h1>grayze <a href="http://localhost:3000/slack/users/me">ME</a></h1>
     </div>
 
     <div ng-repeat="post in posts">
