--- a/views/slack.ejs
+++ b/views/slack.ejs
@@ -11,10 +11,11 @@
 <body ng-app="grayze" ng-controller="MainCtrl">
 <nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
     <ul class="nav navbar-nav">
-        <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
-        <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
-        <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
-        <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
+        <li ng-show="isLoggedIn"><img ng-src="{{currentUser.profile_thumb}}"></li>
+        <li ng-show="isLoggedIn"><a>{{ currentUser.user }} - {{ currentUser.team }}</a></li>
+        <li ng-show="isLoggedIn"><a href="" ng-click="logOut()">Log Out</a></li>
+        <li ng-hide="isLoggedIn"><a href="/#/login">Log In</a></li>
+        <li ng-hide="isLoggedIn"><a href="/#/register">Register</a></li>
     </ul>
 </nav>
 <div class="row">
@@ -25,7 +26,7 @@
 <script type="text/ng-template" id="/home.html">
 
     <div class="page-header">
-        <h1>grayze <a href="http://localhost:3000/slack/users/me">ME</a></h1>
+        <h1>grayze <a href="http://localhost:3000/slack/user/me">ME</a></h1>
     </div>
 
     <div ng-repeat="post in posts">
@@ -44,7 +45,7 @@
             </span>
     </div>
 
-    <form ng-submit="addPost()" ng-show="isLoggedIn()"
+    <form ng-submit="addPost()" ng-show="isLoggedIn"
           style="margin-top:30px;">
         <h3>Add a new post</h3>
 
@@ -62,7 +63,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Post</button>
     </form>
-    <div ng-hide="isLoggedIn()">
+    <div ng-hide="isLoggedIn">
         <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can post.</h3>
     </div>
 </script>
