--- a/views/slack.ejs
+++ b/views/slack.ejs
@@ -29,6 +29,16 @@
         <h1>grayze <a href="http://localhost:3000/slack/user/me">ME</a></h1>
     </div>
 
+    <span>All Channels</span>
+    <style type="text/css">
+        .Rounded {
+        border:solid 1px #000;
+            background-color:#acf;
+            padding:5px;
+        }
+    </style>
+    <span class="Rounded" ng-repeat="channel in channels"><a ng-href="/slack/channel/{{channel.id}}">{{ channel.name }}</a></span>
+
     <div ng-repeat="post in posts">
             <!--<span class="glyphicon glyphicon-arrow-up"-->
                   <!--ng-click="incrementUpvotes(post)"></span>-->
